--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -126,7 +126,7 @@ main{
     transition: opacity 0.3s ease;
     z-index: 903;
     position: absolute;
-    top: 80px;
+    top: 6%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -182,7 +182,7 @@ main{
     transition: opacity 0.3s ease;
     z-index: 505;
     position: absolute;
-    top: 60px;
+    top: 6%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -491,7 +491,7 @@ main{
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 80px;
+    top: 6%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -546,7 +546,7 @@ main{
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 60px;
+    top: 6%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -652,9 +652,9 @@ main{
         background-color: #c08e8e !important;
     }
     //position absolutes
-    .orderby_type-cont, .filter-cont, .filter-tagdd, .filter-addseries{
+    /*.orderby_type-cont, .filter-cont, .filter-tagdd, .filter-addseries{
         top:0;
-    }
+    }*/
 }
 
 // Large devices (desktops, 992px and up)
