--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -20,6 +20,10 @@
     --dropdownbg-color: #313131;
     --pd-actionbtns-color: #444444;
     --shortcuticons-color: #ffffff;
+    --navlink-readingtime-color: #415050;
+    --navlink-readingtime-color-hover: #607d7d;
+    --navlink-aboutyou-color: #473c3c;
+    --navlink-aboutyou-color-hover: #6c5959;
     //----------
 
     --searchplaceholder-color: #939393;
@@ -45,6 +49,10 @@
     --dropdownbg-color: #e7e7e7;
     --pd-actionbtns-color: #c7c7c7;
     --shortcuticons-color: #626262;
+    --navlink-readingtime-color: #415050;
+    --navlink-readingtime-color-hover: #607d7d;
+    --navlink-aboutyou-color: #473c3c;
+    --navlink-aboutyou-color-hover: #6c5959;
     //----------
 
     //#bda952
