--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -16,6 +16,10 @@
   --dropdownbg-color: #313131;
   --pd-actionbtns-color: #444444;
   --shortcuticons-color: #ffffff;
+  --navlink-readingtime-color: #415050;
+  --navlink-readingtime-color-hover: #607d7d;
+  --navlink-aboutyou-color: #473c3c;
+  --navlink-aboutyou-color-hover: #6c5959;
   --searchplaceholder-color: #939393;
 }
 
@@ -37,6 +41,10 @@
   --dropdownbg-color: #e7e7e7;
   --pd-actionbtns-color: #c7c7c7;
   --shortcuticons-color: #626262;
+  --navlink-readingtime-color: #9298b9;
+  --navlink-readingtime-color-hover: #777ea8;
+  --navlink-aboutyou-color: #a08888;
+  --navlink-aboutyou-color-hover: #8d6767;
 }
 
 /*
