--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -69,9 +69,9 @@
             <div class="header_right_section">
                 <div class="shortcuts-cont">
                     <i class="bi bi-search search-shortcut"></i>
-                    <i class="bi bi-currency-dollar donate-shortcut"></i>
-                    <i class="bi bi-plus-circle-fill"></i>
-                    <i class="bi bi-bell-fill"></i>
+                    <i class="bi bi-chat-dots chat-shortcut"></i>
+                    <i class="bi bi-plus-circle"></i>
+                    <i class="bi bi-bell"></i>
                 </div>
                 <div class="account-cont">
                     <div class="ppic-wrap">
