--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -49,10 +49,10 @@
     --dropdownbg-color: #e7e7e7;
     --pd-actionbtns-color: #c7c7c7;
     --shortcuticons-color: #626262;
-    --navlink-readingtime-color: #415050;
-    --navlink-readingtime-color-hover: #607d7d;
-    --navlink-aboutyou-color: #473c3c;
-    --navlink-aboutyou-color-hover: #6c5959;
+    --navlink-readingtime-color: #9298b9;
+    --navlink-readingtime-color-hover: #777ea8;
+    --navlink-aboutyou-color: #a08888;
+    --navlink-aboutyou-color-hover: #8d6767;
     //----------
 
     //#bda952
