--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -8,11 +8,8 @@
     }
 }
 @using OmneFictio.Web.Models
-@using QuickType
+@using Models
 @model ReadViewmodel
-@{
-    /*DeletedStatus class is used for "string Body" in a lot of places. It's a QuickType thing.*/
-}
 
 <div class="orderby_type-cont" id="orderby-modal">
     <div class="obt-header">
@@ -303,21 +300,21 @@
     </div>
 
     @{
-        if(Model.posts.Count() > 0){
+        if(Model.posts.Count > 0){
             foreach(PostRead1 post in Model.posts){
                 <div class="post">
                     <div class="post-detail d-flex">
                         <div class="p-header">
                             <div class="p-title">
-                                <span>@post.Title</span>
-                                <span class="p-date">@post.PublishDate.Date.ToShortDateString()</span>
+                                <span>@post.title</span>
+                                <span class="p-date">@post.publishDate.Date.ToShortDateString()</span>
                             </div>
                             <div class="p-menu">
                                 <i class="bi bi-caret-left p-menubtn"></i>
                             </div>
                         </div>
                         <div class="p-body">
-                            @post.PostDescription    
+                            @post.postDescription    
                         </div>
                         <div class="p-footer">
                             <div class="pf-evaluation">
@@ -326,13 +323,15 @@
                                     @{
                                         int likes = 0;
                                         string negative = "--";
-                                        foreach(Vote value in post.Votes){
-                                            if(value.Vote1 == true)
-                                                likes++;
-                                            else
-                                                likes--;
+                                        if(post.votes.Count > 0){
+                                            foreach(Vote value in post.votes){
+                                                if(value.vote1 == true)
+                                                    likes++;
+                                                else
+                                                    likes--;
+                                            }
                                         }
-                                        if(likes > 0)
+                                        if(likes >= 0)
                                             @likes
                                         else
                                             @negative
@@ -342,17 +341,17 @@
                                 <span class="p-rate">
                                     @{
                                         double rate = 0;
-                                        foreach(Rate value in post.Rates){
-                                            if(value.Rate1 >= 0 && value.Rate1 <= 10)
-                                                rate += value.Rate1;
+                                        foreach(Rate value in post.rates){
+                                            if(value.rate1 >= 0 && value.rate1 <= 10)
+                                                rate += value.rate1;
                                         }
-                                        string ortRate = Math.Round((rate / post.Rates.Count()), 1).ToString() + "/10";
+                                        string ortRate = Math.Round((rate / post.rates.Count), 1).ToString() + "/10";
                                         @ortRate
                                     }
                                 </span>
                             </div>
                             <div class="pf-user">
-                                <span class="p-username">@post.Account.Username</span>
+                                <span class="p-username">@post.account.username</span>
                                 <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                             </div>
                         </div>
@@ -363,38 +362,38 @@
                                 Tags
                             </span>
                             <div class="pd-tags">
-                                @if(post.Tags.Count() < 1){
+                                @if(post.tags.Count < 1){
                                     <span>Empty</span>
                                 }
                                 else{
-                                    foreach(QuickType.DeletedStatus tag in post.Tags){
-                                        <span>@tag.Body</span>
+                                    foreach(Tag tag in post.tags){
+                                        <span>@tag.body</span>
                                     }
                                 }
                                 <!--<span>Action</span>-->
                             </div>
                             <div class="pd-type">
                                 <span class="pd-heading">Type:</span>
-                                <span class="pd-value">@post.PostType.Body</span>
+                                <span class="pd-value">@post.postType.body</span>
                             </div>
-                            @if(post.ExistingStories.Count() > 0){
+                            @if(post.existingStories.Count > 0){
                                 <span class="pd-heading">
                                     Series
                                 </span>
                                 <div class="pd-series">
-                                    @foreach(QuickType.ExistingStory story in post.ExistingStories){
-                                        <span>@story.Body</span>
+                                    @foreach(ExistingStory story in post.existingStories){
+                                        <span>@story.body</span>
                                     }
                                     <!--<span>Pirates of the Caribbean</span>-->
                                 </div>
                             }
                             <div class="pd-poststatus">
                                 <span class="pd-heading">Status:</span>
-                                <span class="pd-value">@post.PostStatus.Body</span>
+                                <span class="pd-value">@post.postStatus.body</span>
                             </div>
                             <div class="pd-language">
                                 <span class="pd-heading">Language:</span>
-                                <span class="pd-value">@post.Language.Body</span>
+                                <span class="pd-value">@post.language.body</span>
                             </div>
                         </div>
                         <div class="pd-right">
